# dirac

./: .gitignore  README.md  pyproject.toml  requirements.txt
dirac/config/: __init__.py
dirac/consolidation/: service.py
dirac/context/: __init__.py  assembler.py
dirac/log/: console.py  redaction.py
dirac/memory/: contracts.py  tools.py
dirac/permission/: service.py
dirac/provider/: fake.py  ollama.py  openai_compatible.py  routing.py
dirac/task/: scheduler.py
dirac/tool/: executor.py
tests/: conftest.py  test_provider_fake.py  test_task_scheduler.py
