[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirac"
version = "0.1.0"
description = "Modular Python runtime for Discord-centered agent work."
requires-python = ">=3.14"
dependencies = [
  "discord.py-self>=2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.27",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
]

test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
  "mypy>=1.11",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dirac*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--strict-config --strict-markers"
xfail_strict = true
filterwarnings = ["error"]

[tool.unittest]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
preview = true
src = ["bot.py", "doctor.py", "dirac", "tests"]

[tool.ruff.lint]
# ANN bans untyped defs and (via ANN401) the use of `typing.Any` in
# annotations, enforcing the "no Any abuse / encapsulate parameters" rule.
# Any that is genuinely unavoidable at the JSON/transport boundary is allowed
# only via an explicit, justified `# noqa: ANN401` on the offending line.
select = ["ALL"]
# Ignore only formatter-conflicting and documentation-related rules.
ignore = ["COM812", "CPY001", "D", "DOC", "ISC001", "T201"]

[tool.ruff.lint.per-file-ignores]
# Allow conventional pytest assertions and literal-heavy fixtures in tests.
"tests/**" = ["PLR2004", "S101"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"dirac.memory.tools.MemoryToolFacade" = { msg = "Depend on dirac.memory.base.BaseMemory across module boundaries." }
"dirac.provider.fake.FakeProviderClient" = { msg = "Fake provider clients are for tests and wiring only. Depend on dirac.provider.base.BaseProviderClient." }
"dirac.provider.ollama.OllamaProviderClient" = { msg = "Depend on dirac.provider.base.BaseProviderClient, not concrete provider clients." }
"dirac.provider.openai_compatible.OpenAICompatibleProviderClient" = { msg = "Depend on dirac.provider.base.BaseProviderClient, not concrete provider clients." }
"dirac.provider.openrouter.OpenRouterProviderClient" = { msg = "Depend on dirac.provider.base.BaseProviderClient, not concrete provider clients." }

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
# Strict typing is the blocking gate. `--strict` already enables
# disallow_untyped_defs, disallow_any_generics, warn_return_any,
# no_implicit_optional, and friends; they are restated here for visibility.
# Python quality gate scope.
files = ["bot.py", "doctor.py", "dirac", "tests"]
python_version = "3.14"
strict = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
no_implicit_optional = true
no_implicit_reexport = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
